12. Reading File Details (Get file)

--- a/videoinfo/index.html
+++ b/videoinfo/index.html
@@ -13,8 +13,8 @@
     <script>
         document.querySelector('form').addEventListener('submit', (event) => {
             event.preventDefault();
-
-            debugger
+            const file = document.querySelector('input').files[0];
+            
         });
     </script>
 </body>
