--- a/videoinfo/index.html
+++ b/videoinfo/index.html
@@ -5,10 +5,12 @@
     <form>
         <div>
             <label>Select a video</label>
-            <input type='file' accept="video/*" />
+            <input type="file" accept="video/*" />
         </div>
         <button type="submit">Get Info</button>
     </form>
+
+    <h1 id="result"></h1>
 
     <script>
         const electron = require('electron');
@@ -18,7 +20,11 @@
             event.preventDefault();
             const { path } = document.querySelector('input').files[0];
 
-            ipcRenderer.send('video:submit', path)
+            ipcRenderer.send('video:submit', path);
+        });
+
+        ipcRenderer.on('video:metadata', (event, duration) => {
+            document.querySelector('#result').innerHTML=`Video is ${duration} seconds`;
         });
     </script>
 </body>
