--- a/todos/main.html
+++ b/todos/main.html
@@ -15,5 +15,9 @@
             li.appendChild(text);
             document.querySelector('ul').appendChild(li);
         });
+
+        ipcRenderer.on('todo:clear', () => {
+            document.querySelector('ul').innerHTML = '';
+        });
     </script>
 </body>
